create or collect resources when finish level
